--- a/LogDataConversionService/LogDataConversionService/LogDataConversionService.csproj
+++ b/LogDataConversionService/LogDataConversionService/LogDataConversionService.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ILogFile.cs" />
     <Compile Include="IService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
