--- a/LogDataConversionService/LogDataConversionService/LogDataConversionService.csproj
+++ b/LogDataConversionService/LogDataConversionService/LogDataConversionService.csproj
@@ -45,13 +45,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\GenericAdapter.cs" />
     <Compile Include="ILogFile.cs" />
     <Compile Include="IService.cs" />
+    <Compile Include="LogAdapter.cs" />
+    <Compile Include="LogParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="LogFiles\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
