Moved to proper project type

--- a/LogDataConversionService/LogDataConversionService/LogDataConversionService.csproj
+++ b/LogDataConversionService/LogDataConversionService/LogDataConversionService.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ILogFile.cs" />
     <Compile Include="IService.cs" />
     <Compile Include="LogAdapter.cs" />
+    <Compile Include="LogFiles\TextLog.cs" />
     <Compile Include="LogParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
@@ -56,9 +57,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="LogFiles\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
