Added service refernece

--- a/TestClient/TestClient/App.config
+++ b/TestClient/TestClient/App.config
@@ -3,4 +3,22 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IService" />
+                <binding name="BasicHttpsBinding_IService">
+                    <security mode="Transport" />
+                </binding>
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://eal-welfaceproject.azurewebsites.net/Service.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
+                contract="LogConverterService.IService" name="BasicHttpBinding_IService" />
+            <endpoint address="https://eal-welfaceproject.azurewebsites.net/Service.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService"
+                contract="LogConverterService.IService" name="BasicHttpsBinding_IService" />
+        </client>
+    </system.serviceModel>
 </configuration>
