--- a/LogDataConversionServiceApplication/LogDataConversionServiceApplication/Web.config
+++ b/LogDataConversionServiceApplication/LogDataConversionServiceApplication/Web.config
@@ -13,7 +13,7 @@
       <serviceBehaviors>
         <behavior>
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="false" httpsGetEnabled="false"/>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
