mainwindow.xaml, added support for several logs being used at once.

--- a/TestClient/TestClient/App.config
+++ b/TestClient/TestClient/App.config
@@ -13,6 +13,9 @@
             </basicHttpBinding>
         </bindings>
         <client>
+            <endpoint address="http://eal-welfaceproject.azurewebsites.net/Service.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
+                contract="LogConverterService.IService" name="BasicHttpBinding_IService" />
             <endpoint address="https://eal-welfaceproject.azurewebsites.net/Service.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService"
                 contract="LogConverterService.IService" name="BasicHttpsBinding_IService" />
