--- a/TestClient/TestClient/UsizoClientSim.csproj
+++ b/TestClient/TestClient/UsizoClientSim.csproj
@@ -56,7 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="FileLocation.cs" />
+    <Compile Include="FileLocationType.cs" />
     <Compile Include="LogFileRepository.cs" />
     <Compile Include="LogFile.cs" />
     <Compile Include="LogReader.cs" />
@@ -73,6 +73,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="LogWriter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
